--- a/src/main/java/com/mycompany/diu_entrega_6/Frame.form
+++ b/src/main/java/com/mycompany/diu_entrega_6/Frame.form
@@ -39,6 +39,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Guardar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="guardarActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
